--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.xls filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+Urdu/train.json filter=lfs diff=lfs merge=lfs -text
